animated pet. added timer for illness. death is also possible. added restart button.